# gl_bpp_rotation

./: .gitignore  111.txt  1515.txt  CMakeLists.txt  CalculateBppErhan.cpp  CalculateBppErhan.h  binpack_erhan_modify.cpp  box06.txt  box08.txt  box09.txt  box10.txt  box13.txt  box14-2.txt  box14.txt  box_all.txt  box_all1.txt  box_all2.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycolor.cpp  mycolor.h  readwritefile.cpp  readwritefile.h  test_5box.txt
color_cpp_h/: mycolor.cpp
exp_candidate1/: box22_325x210x230.txt  box24_325x210x230.txt  box_10_275x90x225.txt  box_15_320x115x250.txt  box_17_300x140x300.txt  box_18_300x140x300.txt  box_22.txt  box_22_300x140x300.txt
exp_candidate2/: 17_manual.txt  box06_245x95x195.txt  box10_275x90x225.txt  box12_320x115x250.txt  box15_300x140x300.txt  box16_300x140x300.txt  box17_325x210x230.txt  box17_325x210x230_manual.txt  box18_325x210x230.txt  box19_325x210x230.txt  box21_445x110x345.txt  box22_445x110x345.txt  box22_445x110x345_manual.txt  box23_325x210x230.txt
many_box_file/: 222.txt  333.txt  box06 - edit.txt  box06.txt  box10-testing.txt  box10.txt  box12.txt  box13.txt
